# ChaCha

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: master.yml
include/: chacha.hpp  colors.hpp  definitions.hpp  encrypt.hpp  error.hpp  fileinteraction.hpp  keygen.hpp  measurement.hpp
src/: chacha.cpp  colors.cpp  encrypt.cpp  error.cpp  fileinteraction.cpp  keygen.cpp  main.cpp  measurement.cpp
